# LowOverlapPCRegistration

./: CMakeLists.txt  LICENSE  README.md  run.sh
8thFloor/: readme.txt
Edge_Extraction/: Difference_Eigenvalues.cpp  Difference_Eigenvalues.h
PointCloudRegistrationTool/: README.md
PointCloudRegistrationTool/include/: Registrator.hpp
PointCloudRegistrationTool/src/: Registrator.cpp
hough3d-code/: Makefile  README  hough.cpp  hough3dlines.cpp  hough3dlines.h  pointcloud.cpp
scripts/: drawLines.py
src/: boundingBox.cc  boundingBox.h  decisionTreeParabolic.cc  decisionTreeParabolic.h  filter.cc  filter.h  findTransformation.cc  findTransformation.h  icp.cc  icp.h  intersection.cc  intersection.h  line_descriptor.cc  line_descriptor.h  main.cc  parabolicCylinder.cc  parabolicCylinder.h  resultWriter.cc  resultWriter.h
